--- a/UTTScan/UTTScan/Views/VistaQR.xaml
+++ b/UTTScan/UTTScan/Views/VistaQR.xaml
@@ -4,15 +4,26 @@
              x:Class="UTTScan.Views.VistaQR">
     <ContentPage.Content>
         <StackLayout>
-            <StackLayout >
+            <StackLayout>
                 <Frame BackgroundColor="#092432">
-                    <Label Text="Leer Código QR" HorizontalOptions="Center" VerticalOptions="CenterAndExpand" TextColor="White" FontSize="20"/>
+                    <Label Text="Leer Código QR" HorizontalOptions="Center" VerticalOptions="CenterAndExpand" 
+                           TextColor="White" FontSize="20"/>
                 </Frame>
                 <StackLayout Spacing="20">
-                    <Entry x:Name="txtResultado" Placeholder="Resultado del QR"></Entry>
-                    <Button x:Name="btnScannerQR" BackgroundColor="#092432" Text="Escanear" TextColor="White" CornerRadius="20" HorizontalOptions="Center" 
-                WidthRequest="150" Clicked="btnScannerQR_Clicked"/>
+                    <!--<Entry x:Name="txtResultado" Placeholder="Resultado del QR"></Entry>-->
+                    <Button x:Name="btnScannerQR" BackgroundColor="#092432" Text="Escanear" TextColor="White" 
+                            CornerRadius="20" HorizontalOptions="Center" 
+                    WidthRequest="150" Clicked="btnScannerQR_Clicked"/>
                 </StackLayout>
+                <ContentView x:Name="loadingView" Padding="10, 0" IsVisible="false" AbsoluteLayout.LayoutBounds="0,0,1,1" 
+                             AbsoluteLayout.LayoutFlags="All">
+                    <StackLayout VerticalOptions="Center" HorizontalOptions="Center">
+                        <StackLayout Orientation="Vertical" HeightRequest="150" WidthRequest="200">
+                            <ActivityIndicator x:Name="activityIndicator" Margin="0,50,0,0" VerticalOptions="Center" 
+                             HorizontalOptions="Center" Color="Black" IsRunning="true" WidthRequest="30" HeightRequest="30"></ActivityIndicator>
+                        </StackLayout>
+                    </StackLayout>
+                </ContentView>
             </StackLayout>
         </StackLayout>
     </ContentPage.Content>
